# game-of-fifteens

./: .gitignore  .gitmodules  README.md
.github/workflows/: backend-test.yml  frontend-test.yml  github-actions-ci-cd-pipeline.yml  test-backend.yml  test-frontend.yml
backend/: CMakeLists.txt  main.cpp  run_tests.sh
backend/fifteens/: CMakeLists.txt
backend/fifteens/libs/: CMakeLists.txt  Fifteens.cpp  Fifteens.h  Position.cpp  fifteens.cpp  fifteens.h  position.cpp  position.h
backend/fifteens/tests/: CMakeLists.txt  positions.cpp  positions_tests.cpp
frontend/: index.html  script.js  style.css
